# ai-seo-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  integrations.ts  types.ts
frontend/src/components/: HighlightedText.tsx  LLMBreakdown.tsx  Layout.tsx  LoadingSpinner.tsx  OpportunityCard.tsx  StatusBadge.tsx  VisibilityGauge.tsx
frontend/src/pages/: Dashboard.tsx  IntegrationsSettings.tsx  Opportunities.tsx  ProjectSetup.tsx  QueryDetails.tsx  ScanResults.tsx
src/aiseo/: __init__.py  cli.py  config.py  main.py
src/aiseo/api/: __init__.py  integrations.py  opportunities.py  projects.py  queries.py  results.py  scans.py  schemas.py
src/aiseo/models/: __init__.py  base.py  opportunity.py  project.py  query.py  result.py  scan.py
src/aiseo/providers/: __init__.py  base.py  chatgpt.py  claude.py  gemini.py  grok.py  perplexity.py
src/aiseo/services/: brand_extractor.py  brand_ranker.py  citation_parser.py  mention_detector.py  opportunity_engine.py  query_generator.py  query_selector.py  scorer.py  visibility_scanner.py
src/aiseo/tasks/: __init__.py  scan_task.py
tests/: test_api.py  test_brand_extractor.py  test_brand_ranker.py  test_mention_detector.py  test_opportunity_engine.py  test_query_generator.py  test_runtime_api_keys.py  test_scan_task.py  test_scorer.py  test_volume.py
tests/test_providers/: test_chatgpt.py  test_claude.py  test_gemini.py  test_perplexity.py
(+7 files in other folders)
